[package]
name = "actix_web_common"
version = "0.1.0"
edition = "2021"
description = "test"
license = "apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.44"
chrono = { version = "0.4", features = ["serde"] }
